--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,9 +24,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Resume</title>
   </head>
+
   <body>
+    <form name="contact" netlify hidden>
+      <input className="{css.form__input}" name="name" placeholder="Name" />
+
+      <input
+        className="{css.form__input}"
+        type="email"
+        name="email"
+        placeholder="Email"
+      />
+      <textarea
+        className="{css.form__textarea}"
+        type="message"
+        name="message"
+        placeholder="Message..."
+      ></textarea>
+      <button type="submit" className="{css.form__button}">Send Message</button>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
